--- a/core/src/main/module.json5
+++ b/core/src/main/module.json5
@@ -3,7 +3,7 @@
     "name": "core",
     "type": "har",
     "deviceTypes": [
-      "default",
+      "phone",
       "tablet",
       "2in1"
     ]
