--- a/pandora/src/main/module.json5
+++ b/pandora/src/main/module.json5
@@ -3,7 +3,7 @@
     "name": "pandora",
     "type": "har",
     "deviceTypes": [
-      "default",
+      "phone",
       "tablet",
       "2in1"
     ]
