1、添加网络访问权限；2、添加日期格式转换工具类；3、验证缓存工具类

--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -45,6 +45,12 @@
           }
         ]
       }
+    ],
+    "requestPermissions": [
+      {
+        "name": "ohos.permission.INTERNET",
+        "reason": "$string:internet_permission_reason"
+      }
     ]
   }
 }
