--- a/pandora/oh-package.json5
+++ b/pandora/oh-package.json5
@@ -1,10 +1,13 @@
 {
   "name": "pandora",
-  "version": "1.0.0",
-  "description": "Please describe the basic information.",
+  "version": "1.0.1",
+  "description": "鸿蒙开发基础封装组件",
   "main": "Index.ets",
-  "author": "",
+  "author": "zhouL",
   "license": "Apache-2.0",
+  "compatibleSdkVersion": "12",
+  "compatibleSdkType": "HarmonyOS",
+  "obfuscated": false,
   "dependencies": {
     "core": "file:../core"
   }
