按规范修改库名称

--- a/pandora/oh-package.json5
+++ b/pandora/oh-package.json5
@@ -9,6 +9,6 @@
   "compatibleSdkType": "HarmonyOS",
   "obfuscated": false,
   "dependencies": {
-    "core": "file:../core"
+    "@lodz/core_hos": "file:../core"
   }
 }
