--- a/core/oh-package.json5
+++ b/core/oh-package.json5
@@ -1,10 +1,15 @@
 {
-  "name": "core",
+  "name": "@lodz/core_hos",
   "version": "1.0.1",
   "description": "鸿蒙开发核心工具包",
   "main": "Index.ets",
   "author": "zhouL",
   "license": "Apache-2.0",
+  "homepage": "https://github.com/LZ9/AgileDevHOS",
+  "repository": "https://github.com/LZ9/AgileDevHOS",
+  "keywords": [
+    "工具"
+  ],
   "compatibleSdkVersion": "12",
   "compatibleSdkType": "HarmonyOS",
   "obfuscated": false,
