按照规范修改库名称

--- a/entry/oh-package.json5
+++ b/entry/oh-package.json5
@@ -6,7 +6,7 @@
   "author": "",
   "license": "",
   "dependencies": {
-    "pandora": "file:../pandora"
+    "@lodz/pandora": "file:../pandora"
   }
 }
 
