--- a/pandora/oh-package.json5
+++ b/pandora/oh-package.json5
@@ -1,10 +1,17 @@
 {
-  "name": "pandora",
+  "name": "@lodz/pandora",
   "version": "1.0.1",
-  "description": "鸿蒙开发基础封装组件",
+  "description": "鸿蒙开发基础组件和框架封装",
   "main": "Index.ets",
   "author": "zhouL",
   "license": "Apache-2.0",
+  "homepage": "https://github.com/LZ9/AgileDevHOS",
+  "repository": "https://github.com/LZ9/AgileDevHOS",
+  "keywords": [
+    "基类",
+    "组件库",
+    "控件封装"
+  ],
   "compatibleSdkVersion": "12",
   "compatibleSdkType": "HarmonyOS",
   "obfuscated": false,
