完善Promise扩展相关方法

--- a/entry/oh-package.json5
+++ b/entry/oh-package.json5
@@ -6,7 +6,8 @@
   "author": "",
   "license": "",
   "dependencies": {
-    "@lodz/pandora": "file:../pandora"
+    "@lodz/pandora": "file:../pandora",
+//    "@lodz/pandora": "1.0.1"
   }
 }
 
