--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -18,7 +18,7 @@
         "srcEntry": "./ets/ability/entryability/EntryAbility.ets",
         "description": "$string:ability_desc",
         "startWindowIcon": "$media:bg_splash",
-        "startWindowBackground": "$color:color_00a0e9",
+        "startWindowBackground": "$color:color_00A0E9",
         "exported": true,
         "skills": [
           {
