--- a/pandora/oh-package.json5
+++ b/pandora/oh-package.json5
@@ -1,6 +1,6 @@
 {
   "name": "@lodz/pandora",
-  "version": "1.0.2",//成功上传
+  "version": "1.0.3",//未上传
   "description": "鸿蒙开发基础组件和框架封装",
   "main": "Index.ets",
   "author": "zhouL",
