--- a/pandora/src/main/module.json5
+++ b/pandora/src/main/module.json5
@@ -6,6 +6,12 @@
       "phone",
       "tablet",
       "2in1"
+    ],
+    "requestPermissions": [
+      {
+        "name": "ohos.permission.INTERNET",
+        "reason": "$string:pandora_internet_permission_reason"
+      }
     ]
   }
 }
