--- a/core/oh-package.json5
+++ b/core/oh-package.json5
@@ -1,6 +1,6 @@
 {
   "name": "@lodz/core_hos",
-  "version": "1.0.4",//成功上传
+  "version": "1.0.5",//未上传
   "description": "鸿蒙开发核心工具包",
   "main": "Index.ets",
   "author": "zhouL",
