1、添加权限管理工具类；2、添加图片转换和文件选择方法；3、在splash添加授权样例

--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -50,7 +50,32 @@
       {
         "name": "ohos.permission.INTERNET",
         "reason": "$string:internet_permission_reason"
+      },
+      {
+        "name": "ohos.permission.READ_IMAGEVIDEO",
+        "reason": "$string:imagevideo_permission_reason",
+        "usedScene": {
+          "abilities": ["EntryAbility"],  // 使用权限的Ability名称
+          "when": "always"  // 使用时机（inuse/always）
+        }
+      },
+      {
+        "name": "ohos.permission.WRITE_IMAGEVIDEO",
+        "reason": "$string:imagevideo_permission_reason",
+        "usedScene": {
+          "abilities": ["EntryAbility"],  // 使用权限的Ability名称
+          "when": "always"  // 使用时机（inuse/always）
+        }
+      },
+      {
+        "name": "ohos.permission.CAMERA",
+        "reason": "$string:camera_permission_reason",
+        "usedScene": {
+          "abilities": ["EntryAbility"],  // 使用权限的Ability名称
+          "when": "always"  // 使用时机（inuse/always）
+        }
       }
+
     ]
   }
 }
