--- a/entry/build-profile.json5
+++ b/entry/build-profile.json5
@@ -19,7 +19,10 @@
   ],
   "targets": [
     {
-      "name": "default"
+      "name": "default",
+      output: {
+        "artifactName": "AgileDevHOS"
+      }
     },
     {
       "name": "ohosTest",
